@@ -1,0 +1,31 @@
+/* Libvoikko: Finnish spellchecker and hyphenator library
+ * Copyright (C) 2006 Harri Pitkänen <hatapitk@iki.fi>
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ *********************************************************************************/
+
+#ifndef VOIKKO_CHARSET_H
+#define VOIKKO_CHARSET_H
+
+#include <stddef.h>
+
+/** Normalises an unicode string according to our conventions
+ * @param word string to normalise
+ * @param len length of the string
+ * @return the normalised string or null if normalisation failed
+ */
+wchar_t * voikko_normalise(const wchar_t * word, size_t len);
+
+#endif
